# frost-template

./: .env.example  .gitignore  ASSIGNMENT_en.md  ASSIGNMENT_zh.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev
backend/coordinator/: Cargo.toml
backend/coordinator/migrations/: 0002_create_dkg_tables.sql  0003_create_wallets.sql
backend/coordinator/src/: config.rs  derivation.rs  error.rs  main.rs
backend/coordinator/src/db/: dkg.rs  mod.rs  signing.rs  wallet.rs
backend/coordinator/src/models/: dkg.rs  mod.rs  signing.rs  wallet.rs
backend/coordinator/src/routes/: api_tests.rs  dkg.rs  mod.rs  signing.rs  wallets.rs
backend/migrations/coordinator/: 20260421000001_create_enums.sql  20260421000004_create_signing_tables.sql
backend/migrations/node/: 20260421000002_create_dkg_round_data.sql  20260421000003_create_signing_nonces.sql
backend/tss-node/: Cargo.toml
backend/tss-node/migrations/: 0001_create_key_shares.sql
backend/tss-node/src/: config.rs  derivation.rs  error.rs  main.rs
backend/tss-node/src/db/: dkg.rs  mod.rs  signing.rs
backend/tss-node/src/models/: dkg.rs  mod.rs  signing.rs
backend/tss-node/src/routes/: dkg.rs  mod.rs  signing.rs
designs/: design-guide.md  mockup.html
docker/postgres/: init-databases.sql
docs/: ai-journal.md  api-contract.md  db-schema.md  dev-journal.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: dkg-panel.tsx  transactions-panel.tsx  wallets-panel.tsx
frontend/app/lib/: api.ts
tests/: integration-test.sh
