[workspace]
members = ["coordinator", "tss-node"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.8"
snafu = "0.8.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
solana-client = "3.1.8"
solana-sdk = "3.0.0"
frost-ed25519 = "2.1.0"
hd-wallet = { version = "0.6.1", features = ["edwards", "serde"] }
generic-ec = { version = "0.4", features = ["curve-ed25519", "serde"] }
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
time = { version = "0.3", features = ["serde-human-readable"] }
reqwest = { version = "0.12", features = ["json"] }
bs58 = "0.5"
rand = "0.8"
hex = "0.4"
curve25519-dalek = { version = "=4.1.3", features = ["rand_core"] }
bincode = "1.3"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
